# perun2

./: .gitignore  CONTRIBUTING.md  FUTURE.md  README.md
include/perun2/: arguments.hpp  attribute.hpp  brackets.hpp  cmd.hpp  exception.hpp  logic.hpp  metadata.hpp  perun2.hpp  post-parse-data.hpp  terminator.hpp  token.hpp  util.hpp
include/perun2/command/: com-aggregate.hpp  com-arg.hpp  com-copyto.hpp  com-core.hpp  com-execute.hpp  com-parse-unit.hpp  com-parse.hpp  com-renameto.hpp  com-time.hpp  com.hpp
include/perun2/context/: ctx-aggr.hpp  ctx-global.hpp  ctx-vars.hpp
include/perun2/datatype/: cast.hpp  definition-action.hpp  incr-constr.hpp  math.hpp  numbers.hpp  primitives.hpp
src/: CMakeLists.txt  Makefile  Perun2.cbp  Perun2.depend  Uroboros.cbp  _findMissingLicenses.peru  _findMissingLicenses.uro  _pendrive.peru  _pendrive.uro  _runBlackBoxTests.peru  _runBlackBoxTests.uro  _runTests.peru  _runTests.uro  _windres.peru  _windres.uro  arguments.cpp  arguments.h  attr-memory.cpp  attr-memory.h  attribute.cpp  attribute.h  brackets.cpp  brackets.h  cache.cpp  cache.h  cache.hpp  cmd.cpp  cmd.h  console.cpp  console.h  const-cache.cpp  const-cache.h  context.cpp  context.h  exception.cpp  exception.h  guardian.cpp  guardian.h  hash.cpp  hash.h  (+43 more)
src/command/: aggregate.cpp  aggregate.h  com-aggregate.cpp  com-aggregate.h  com-arg.cpp  com-arg.h  com-condition.cpp  com-condition.h  com-condition.hpp  com-copyto.cpp  com-copyto.h  com-core-aggr.cpp  com-core-aggr.h  com-core-aggr.hpp  com-core.cpp  com-core.h  com-create.cpp  com-create.h  com-create.hpp  com-def-action.cpp  com-def-action.h  com-def-action.hpp  com-execute.cpp  com-execute.h  com-listener.h  com-listener.hpp  com-misc.cpp  com-misc.h  com-misc.hpp  com-moveto.cpp  com-moveto.h  com-moveto.hpp  com-parse-kw.cpp  com-parse-kw.h  com-parse-kw.hpp  com-parse-unit.cpp  com-parse-unit.h  com-parse.cpp  com-parse.h  com-print.cpp  (+15 more)
src/context/: ctx-aggr.cpp  ctx-aggr.h  ctx-file.cpp  ctx-file.h  ctx-file.hpp  ctx-global.cpp  ctx-global.h  ctx-index.cpp  ctx-index.h  ctx-index.hpp  ctx-location.cpp  ctx-location.h  ctx-location.hpp  ctx-main.cpp  ctx-main.h  ctx-main.hpp  ctx-vars.cpp  ctx-vars.h
src/datatype/: between.cpp  between.h  between.hpp  cast.cpp  cast.h  chars.cpp  chars.h  comparison.cpp  comparison.h  concat.cpp  concat.h  datatype.h  datatype.hpp  def-gen.h  def-var.cpp  def-var.h  definition-action.h  definition.cpp  definition.h  definition.hpp  exp-element.h  exp-element.hpp  function.cpp  function.h  gen-memory.cpp  gen-memory.h  gen-ref.cpp  gen-ref.h  generator.cpp  generator.h  generator.hpp  incr-constr.cpp  incr-constr.h  math.cpp  math.h  number-int.cpp  number-int.h  number.cpp  number.h  number.hpp  (+26 more)
src/datatype/function/: func-aggr.cpp  func-aggr.h  func-aggr.hpp  func-attr.cpp  func-attr.h  func-bool.cpp  func-bool.h  func-bool.hpp  func-generic.h  func-generic.hpp  func-list.cpp  func-list.h  func-number.cpp  func-number.h  func-string.cpp  func-string.h  func-string.hpp  func-time.cpp  func-time.h
src/datatype/generator/: gen-bool-compare.cpp  gen-bool-compare.h  gen-bool-constr.cpp  gen-bool-constr.h  gen-bool-constr.hpp  gen-bool.cpp  gen-bool.h  gen-bool.hpp  gen-definition.cpp  gen-definition.h  gen-definition.hpp  gen-double-asterisk.cpp  gen-double-asterisk.h  gen-double-asterisk.hpp  gen-generic-filter.h  gen-generic.h  gen-generic.hpp  gen-like.cpp  gen-like.h  gen-list.cpp  gen-list.h  gen-list.hpp  gen-number.cpp  gen-number.h  gen-numlist.cpp  gen-numlist.h  gen-os-gen.cpp  gen-os-gen.h  gen-os.cpp  gen-os.h  gen-os.hpp  gen-pattern.cpp  gen-pattern.h  gen-period.cpp  gen-period.h  gen-period.hpp  gen-string.cpp  gen-string.h  gen-string.hpp  gen-time.cpp  (+5 more)
src/datatype/parse/: parse-asterisk.cpp  parse-asterisk.h  parse-asterisk.hpp  parse-bool.cpp  parse-bool.h  parse-bool.hpp  parse-definition.cpp  parse-definition.h  parse-function.cpp  parse-function.h  parse-function.hpp  parse-generic.cpp  parse-generic.h  parse-generic.h.save-failed  parse-list.cpp  parse-list.h  parse-number.cpp  parse-number.h  parse-numlist.cpp  parse-numlist.h  parse-order.cpp  parse-order.h  parse-period.cpp  parse-period.h  parse-period.hpp  parse-prototype.cpp  parse-prototype.h  parse-string.cpp  parse-string.h  parse-time.cpp  parse-time.h  parse-timlist.cpp  parse-timlist.h  parse-timlist.hpp  parse-unit.cpp  parse-unit.h  parse-var.cpp  parse-var.h  parse-var.hpp
src/datatype/text/: chars.cpp  chars.h  concat.cpp  concat.h  latin.cpp  latin.h  like.cpp  like.h  like.hpp  raw.cpp  raw.h  regexp.cpp  regexp.h  regexp.hpp  resemblance.cpp  resemblance.h  strings.cpp  strings.h  strings.hpp  text-parsing.cpp  text-parsing.h  wildcard.cpp  wildcard.h
src/os/: os-common.cpp  os-common.h  os-common.hpp  os-linux.cpp  os-linux.h  os-mac.cpp  os-mac.h  os-mac.hpp  os-posix.cpp  os-posix.h  os-posix.hpp  os-windows.cpp  os-windows.h  os.cpp  os.h
src/programs/: pattern.cpp  pattern.h  programs.h  registry.cpp  registry.h  win-programs-data.cpp  win-programs-data.h  win-programs.cpp  win-programs.h
src/programs/linux/: linux-programs.cpp  linux-programs.h
src/programs/mac/: mac-programs.cpp  mac-programs.h
src/programs/windows/: pattern.cpp  pattern.h  programs-data.cpp  programs-data.h  programs.cpp  programs.h  registry.cpp  registry.h  registry.hpp  start-menu.cpp  start-menu.h  start-menu.hpp  win-programs.cpp  win-programs.h
src/python3/: com-python3.cpp  com-python3.h  com-python3.hpp  python3-processes.cpp  python3-processes.h  shared-memory.cpp  shared-memory.h
src/test/blackbox/: .gitignore  README.md  run.py
src/test/blackbox/res/: a.txt
src/test/blackbox/res/cc/: 03.js
src/test/blackbox/res/many texts/: ex_13.txt
src/test/datatype/: .gitignore  run.bat  test-const.cpp  test-const.h  test-in.cpp  test-in.h  test-like.cpp  test-like.h  test-main.cpp  test-time.cpp  test-time.h  test.h
src/var/: var-bundle.h  var-context.cpp  var-context.h  var-group.cpp  var-group.h  var-inner.cpp  var-inner.h  var-runtime.cpp  var-runtime.h  var.cpp  var.h
(+35 files in other folders)
